<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_color"
    tools:context=".ui.Login.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/login_btn">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/dmsansbold"
                    android:textCursorDrawable="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"

                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterMaxLength="10"
                app:hintTextColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/dmsansbold"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@color/colorPrimary"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkB_rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/dmsansbold"
                android:textStyle="bold"
                android:padding="10dp"
                android:button="@drawable/custome_chexkbox"
                android:textColor="@color/colorPrimary"
                android:text="@string/str_remember_Me"
                />

            <TextView
                android:id="@+id/tv_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="100dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/text_new_account"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"

                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/login_btn"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/borer_rait"
        android:backgroundTint="@color/home"
        android:enabled="false"
        android:fontFamily="@font/dmsansbold"
        android:gravity="center"
        android:text="@string/str_login"
        android:textColor="@color/notEnabledButton"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="2dp"
        app:spinning_bar_width="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>